tests/mm0_mmu/fail/bad-sort2413.mmu
-- bad modifier order
(sort s2413 strict free pure provable)